tests/typing/should_fail/same_args_in_method.java
package tutu.titi.toto;

class A {
	public int method1(int i, float i) {
		return 1;
	}
}
